--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Explore Our Collection</h2>
         <div class="gallery-grid">
             <div class="gallery-item">
-                <img src="C:\Users\zack_\Desktop\tot\gallery\shoefive.jpg" alt="Shoe 1">
+                <img src=".\images\shoefive.jpg" alt="Shoe 1">
             </div>
             <div class="gallery-item">
                 <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\shoeone.jpg" alt="Shoe 1">
