--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Main Header Section -->
    <header class="header">
     <div class="logo">
-        <img src="TOTZORED.PNG" alt="Totzo Shoes Logo">
+        <img src=".\images\TOTZORED.PNG" alt="Totzo Shoes Logo">
     </div>
     <h1 class="brand-name">Totzo Shoes</h1>
     <p>Your Kids' Favorite Footwear!</p>
@@ -35,13 +35,13 @@
                 <img src=".\images\shoefive.jpg" alt="Shoe 1">
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\shoeone.jpg" alt="Shoe 1">
+                <img src=".\images\shoeone.jpg" alt="Shoe 1">
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\shoethree.jpg" alt="Shoe 3">
+                <img src=".\images\shoethree.jpg" alt="Shoe 3">
             </div>
             <div class="gallery-item">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\shoefour.jpg" alt="Shoe 4">
+                <img src=".\images\shoefour.jpg" alt="Shoe 4">
             </div>
         </div>
     </section>
@@ -51,13 +51,13 @@
         <h3>Follow Us</h3>
         <div class="social-links">
             <a href="https://www.facebook.com/share/18LD3Aj9bf/?mibextid=LQQJ4d" target="_blank">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\Facebook 40x40.png" alt="Facebook">
+                <img src=".\images\Facebook 40x40.png" alt="Facebook">
             </a>
             <a href="https://www.instagram.com/totzoshop?igsh=amN5cWdqbW92ZXJy" target="_blank">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\Instagram 40x40.png" alt="Instagram">
+                <img src=".\images\Instagram 40x40.png" alt="Instagram">
 				</a>
             <a href="https://wa.me/+917463819422" target="_blank">
-                <img src="C:\Users\zack_\OneDrive\Desktop\tot\gallary\Whatsapp 40x40.png" alt="whatsapp">
+                <img src=".\images\Whatsapp 40x40.png" alt="whatsapp">
             </a>
         </div>
     </section>
