--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Main Header Section -->
    <header class="header">
     <div class="logo">
-        <img src=".\images\TOTZORED.PNG" alt="Totzo Shoes Logo">
+        <img src=".\images\TOTZORED.png" alt="Totzo Shoes Logo">
     </div>
     <h1 class="brand-name">Totzo Shoes</h1>
     <p>Your Kids' Favorite Footwear!</p>
